assets/sass/app.scss
@import "@asl/service";

@import "./filters";

.data {
  padding: $gutter;
  background: $govuk-blue;
  color: white;
  a {
    color: white;
    text-decoration: none;
  }
}

details {
  margin-top: 2*$gutter;
}

.code {
  background: #eee;
  border: #ccc;
  padding: 1em;
  font-family: monospace;
}

dl {
  margin-bottom: $gutter;
  dt {
    font-weight: bold;
  }
  dd {
    margin-bottom: $gutter/2;
    white-space: pre-line;
  }
}

.headline {
  margin-top: 0;
}

